<resources>
    <string name="app_name">Campus Expense</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nguyen_thanh_trieu">Nguyen Thanh Trieu</string>
    <string name="welcome_to_constraint_layout">Welcome to Constraint layout</string>
    <string name="it0603">IT0603</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="button_7">Button 7</string>
    <string name="button5">Button5</string>
    <string name="profile">Profile</string>
    <string name="first_activity_running">First Activity Running</string>
    <string name="start_activity">Start Activity</string>
    <string name="activity_second_running">Activity Second Running</string>
    <string name="dong_y_voi_dieu_khoan">Dong y voi dieu khoan</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="click_me">Click me</string>
    <string name="female">Female</string>
    <string name="chon_gioi_tinh_cua_ban">Chon gioi tinh cua ban ?</string>
    <string name="male">Male</string>
    <string name="choose_gender">Choose gender</string>
    <string name="chon_do_tuoi_cua_ban">Chon do tuoi cua ban ?</string>
    <string name="_15_25">15-25</string>
    <string name="_25_35">25-35</string>
    <string name="_35_50">35-50</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home page</string>
    <string name="profile_page">Profile page</string>
    <string name="settings_page">Settings page</string>
    <string name="products_lits">Products lits</string>
    <string name="products_lists">Products lists</string>
    <string name="_1">1</string>
    <string name="iphone_15">Iphone 15</string>
    <string name="_10000">10000</string>
    <string name="enter_url_website">Enter url website</string>
    <string name="view_url">view URL</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="call">Call</string>
    <string name="go_to_other_activity">go to other Activity</string>
    <string name="intent_second_demo">Intent Second demo</string>
    <string name="comeback_activity">ComeBack Activity</string>
    <string name="send_data">Send data</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="sum_number">Sum Number</string>
    <string name="clear_data">Clear Data</string>
    <string name="result">Result</string>
    <string name="history_action">History Action</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_full_name">Enter Full name</string>
    <string name="save_data">Save Data</string>
    <string name="next">Next</string>
    <string name="id_student">ID Student:</string>
    <string name="name_student">Name Student</string>
    <string name="load_data">Load Data</string>
    <string name="back_page">Back Page</string>
    <string name="register_account">Register Account</string>
    <string name="submit">Submit</string>
    <string name="login_application">Login Application</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="signin">Signin</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
</resources>