<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dong_y_voi_dieu_khoan"/>
    <CheckBox
        android:id="@+id/cb_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"/>
    <CheckBox
        android:id="@+id/cb_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"/>
    <Button
        android:id="@+id/btn_click_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:clickable="false"
        android:onClick="handleClickMe"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chon_gioi_tinh_cua_ban"/>
    <RadioButton
        android:id="@+id/rad_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"/>
    <RadioButton
        android:id="@+id/rad_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"/>
    <Button
        android:id="@+id/btn_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_gender"
        android:clickable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chon_do_tuoi_cua_ban"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rad_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15_25"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rad_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25_35"/>
        <RadioButton
            android:id="@+id/rad_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_35_50"/>
    </RadioGroup>
</LinearLayout>