<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:rowCount="4"
    android:columnCount="3"
    android:padding="15dp"
    android:background="#F1E9E9">

    <Button
        android:id="@+id/button1"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="left|top"
        android:text="@string/button_1"
        />

    <Button
        android:id="@+id/button2"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_gravity="right|top"
        android:text="@string/button_2"
        />
    <Button
        android:id="@+id/button3"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="3"
        android:text="@string/button_3"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="178dp"
        android:layout_columnSpan="3"
        android:layout_gravity="center|top"
        android:text="@string/button_4" />

    <Button
        android:id="@+id/button5"
        android:layout_gravity="left|top"
        android:text="@string/button_5"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_width="wrap_content"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="center|top"
        android:text="@string/button_6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_gravity="right|top"
        android:text="@string/button_7"
        android:layout_row="3"
        android:layout_column="2"
        />




</GridLayout>