<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:gravity="center">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginEnd="10dp"
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <Button
            android:layout_marginEnd="10dp"
            android:text="@string/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>