<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:background="#81EA06"
    android:padding="16dp">
    <!--  Logo  -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/imageView_Logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        />
    <!--  EditText Email  -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextAccount"
        app:layout_constraintTop_toBottomOf="@id/imageView_Logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="12dp"
        android:background="#ffffff"
        android:layout_marginTop="50dp"/>
    <!-- EditText Password   -->
    <EditText
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextAccount"
        android:padding="12dp"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <!-- Button Login   -->
    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"/>
    <!-- TextView -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/btn_Login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColor="#E50F0F"/>
</androidx.constraintlayout.widget.ConstraintLayout>