<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_constraint_layout"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#9C27B0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tv_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/it0603"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="#F44336"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome"/>
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/tv_class"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        android:layout_marginStart="70dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>